# ChangeLog for www-apps/subsonic
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*subsonic-4.6 (28 Aug 2012)

  28 Aug 2012; Dean Matzkov <bapabooiee@gmail.com> +subsonic-4.6.ebuild:
  Version bump.

  15 Apr 2011; Dean Matzkov <bapabooiee@gmail.com> subsonic-4.4.ebuild:
  userpriv and usersandbox in FEATURES is now properly checked.

  14 Feb 2011; Dean Matzkov <bapabooiee@gmail.com> subsonic-4.4.ebuild:
  Due to the hackiness of Maven in Portage, added a warning to let the user
  know "userpriv usersandbox" must be in FEATURES. Also hard-coded to use mvn-2.2.

  14 Feb 2011; Dean Matzkov <bapabooiee@gmail.com> subsonic-4.4.ebuild,
  metadata.xml:
  Nuked the tomcat-deploy USE flag, since anyone who's going to try to deploy
  Subsonic probably already knows what they're doing. Also some misc cleanup.

  09 Feb 2011; Dean Matzkov <bapabooiee@gmail.com> subsonic-4.4.ebuild,
  +metadata.xml:
  Created tomcat-deploy USE flag, which attempts to automatically deploy
  Subsonic. Also fixed DESCRIPTION.

*subsonic-4.4 (09 Feb 2011)

  09 Feb 2011; Dean Matzkov <bapabooiee@gmail.com> +subsonic-4.4.ebuild:
  Another big, dumb, hacky ebuild.
