@@ -1,6 +1,11 @@
 # ChangeLog for www-apps/subsonic
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*subsonic-4.7 (19 Jan 2013)
+
+  19 Jan 2013; Dean Matzkov <bapabooiee@gmail.com> +subsonic-4.7.ebuild:
+  Version bump.
 
 *subsonic-4.6 (28 Aug 2012)
 
